ARMY esta listo

--- a/Precios.html
+++ b/Precios.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>ARMY -Tus Mejores Rifles</title>
+		<title>Precios-Army</title>
 		<meta charset="utf-8"/>
 		<link href="https://fonts.googleapis.com/css?family=Arbutus+Slab|Carter+One" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="CSS/Rifles.css">
 	</head>
 	<body>
-		<section id="portada " class="portada backgraund backgraund">
-			<!-- portada -->
-			<header id="header" class="header"> <!--header-->
+		<header id="header" class="header backgraund"> <!--header-->
 			<figure class="logotipo"> 
 			<!--logotipo-->
 				<img src="Imagenes/images.jpg" width="260" height="80" alt="ARMY - Logotipo" />
@@ -23,51 +21,43 @@
 						</a>
 					</li>
 					<li>
-						<a href="#Rifles">
+						<a href="index.html#Rifles">
 							Rifles
 						</a>
 					</li>
 					<li>
-						<a href="Precios.html">
+						<a href="precios.html">
 							Precios
 						</a>
-					</li>
 				</ul>
 			</nav>
 		</header>
-			<div class="Mass">
-			<h1 class="titulo">Rifles Poderosos</h1><!-- titulo -->
-		  <h3 class="titulo-a">Se Todo un Experto en Armas</h3><!--resumen-->
-			<a class="button" href="#Rifles">Conoce Mas</a><!--boton-->
-		</div>
-		</section>
-		<section id="Rifles" class="Rifles">
-			<!-- Rifles -->
-			<h2>Los Mejores Rifles</h2><!--titulo-->
-			<article class="Rifle"><!--Rifle-1-->
-				<img class="left" src="Imagenes/tac-50 a1-r2.jpg" width="375"  alt="Rifle Tac 50" />
-				<div class="Container-a">
-				<h3 class="titulo-b">Rifle McMillan TAC 50</h3>
-				<ol>
-					<li>Calibre:12,7mm</li>
-					<li>Velocidad Maxima 805m/s</li>
-					<li>Alcance Efectivo de 4.000m aprox</li>
-				</ol>
-				<div/>
-			</article>
-			<article class="Rifle">	<!--Rifle-2-->
-				<img class="right" src="Imagenes/CheyTacIntervention.jpg" width="375"  alt="Rifle Chery Tac" />
-				<div class=" Container-b">
-				<h3 class="titulo-b">Rifle Chery TAC M-200</h3>
-				<ol>
-					<li>Calibre:10mm</li>
-					<li>Cargador Extraible de 7 Balas</li>
-					<li>Alcance Efectivo de 2.300m aprox</li>
-				</ol>
-				</div>
-			</article>
-		</section>
-			<footer class="footer">
+		<div class="contenedor">
+	<section class="tabla">
+		<table>
+			<thead>
+				<tr>
+					<th>Modelo</th>
+					<th>Precio</th>
+					<th>Descripcón</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Rifle McMillan TAC 50</td>
+					<td>$10000</td>
+					<td>El McMillan Tac-50 es un arma militar y policial, que bajo la denominación C15 es el fusil de francotirador de largo alcance estándar del Ejército de Canadá desde el año 2000.</td>
+				</tr>
+				<tr>
+					<td>Rifle Chery TAC M-200</td>
+					<td>$14000</td>
+					<td>El CheyTac M-200 Intervention es un fusil de francotirador de cerrojo estadounidense fabricado por CheyTac para interdicción de objetivos a larga distancia.</td>
+				</tr>
+			</tbody>
+		</table>
+	</section>
+  </div>
+		<footer class="footer">
 				<div class="contenedor">
 					<div class="Contacto">
 							<img src="
@@ -112,5 +102,5 @@
 				</form>
 				</div>
 			</footer>
-	</body>	
-</html>
+	</body>
+	</html>
